# clap-i18n-richformatter

./: Cargo.toml  README.md  crowdin.yml
clap-i18n-derive/: Cargo.toml
clap-i18n-derive/src/: lib.rs
examples/: get_matches_example.rs  i18n_example.rs  positional_example.rs
i18n/de-DE/: clap_i18n_richformatter.ftl
i18n/en-US/: clap_i18n_richformatter.ftl
i18n/es-ES/: clap_i18n_richformatter.ftl
i18n/fr-FR/: clap_i18n_richformatter.ftl
i18n/ru-RU/: clap_i18n_richformatter.ftl
i18n/zh-CN/: clap_i18n_richformatter.ftl
src/: lang.rs  lib.rs
