[package]
name = "clap-i18n-richformatter"
version = "0.3.0"
edition = "2024"
license = "MIT"
description = "Clap rich formatter with i18n support"

[dependencies]
i18n-embed = { git = "https://github.com/elide-tools/cargo-i18n.git", rev = "dbff18226ba47ccabd45cf1b7fa93153ebbbc62e", features = ["fluent-system"] }
i18n-embed-fl = { git = "https://github.com/elide-tools/cargo-i18n.git", rev = "dbff18226ba47ccabd45cf1b7fa93153ebbbc62e" }
rust-embed = "8"
unic-langid = "0"
clap = "4"
clap-i18n-derive = { version = "0.1.0", path = "clap-i18n-derive", optional = true }

[dev-dependencies]
clap = { version = "4", features = ["derive"] }

[features]
default = ["derive", "desktop-language-requester"]
derive = ["dep:clap-i18n-derive"]
desktop-language-requester = ["i18n-embed/desktop-requester"]

[workspace]
members = ["clap-i18n-derive"]
