[package]
name = "clap-i18n-richformatter"
version = "0.3.0"
edition = "2024"
license = "MIT"
description = "Clap rich formatter with i18n support"

[dependencies]
i18n-embed = { git = "https://github.com/elide-tools/cargo-i18n.git", rev = "1571a30e35cc3b7ca466624e123eadbec865c027", features = ["fluent-system"] }
i18n-embed-fl = { git = "https://github.com/elide-tools/cargo-i18n.git", rev = "1571a30e35cc3b7ca466624e123eadbec865c027" }
rust-embed = "8"
unic-langid = "0"
clap = "4"
clap-i18n-derive = { version = "0.1.0", path = "clap-i18n-derive", optional = true }

[dev-dependencies]
clap = { version = "4", features = ["derive"] }

[features]
default = ["derive", "desktop-language-requester"]
derive = ["dep:clap-i18n-derive"]
desktop-language-requester = ["i18n-embed/desktop-requester"]

[workspace]
members = ["clap-i18n-derive"]
