[package]
name = "clap-i18n-derive"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Derive macro for clap-i18n-richformatter"
repository = "https://github.com/mkrueger/clap-i18n-richformatter"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing"] }
